[package]
name = "import_foods"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "import_foods"
path = "src/main.rs"

[[bin]]
name = "retranslate"
path = "src/bin/retranslate.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
unicode-normalization = "0.1"
regex = "1"
csv = "1.3"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
sonic-rs = "0.5.8"
rayon = "1.11.0"
surrealdb = { version = "3.0.5", features = ["protocol-ws", "protocol-http"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
